player leaving scenario

--- a/intervention/WebContent/home.html
+++ b/intervention/WebContent/home.html
@@ -82,7 +82,7 @@
 <center><h1>Let's Play Intervention <i>Online</i> </h1></center>
 </p>
 
-
+need to show the game that they're currently attached to
 <div class="row">
 		<div class="col-md-12">
 		<div class="error alert alert-dismissible alert-danger" style="display:none" role="alert"></div>
