--- a/intervention/WebContent/home.html
+++ b/intervention/WebContent/home.html
@@ -42,24 +42,36 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <a class="navbar-brand" href="javascript:Utils.goPage(Urls.HOME);">Intervention <i>Online</i></a>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-   
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
+<ul class="nav navbar-nav navbar-right">
+ <li ><a class="attached_game_link" style="display:none" href="#">In Game!</a></li>
+<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Signed in as <span class="username">[UserName]</span> 
-		  (<span class="career_score">0</span>)<span class="caret"></span></a>
+		  <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#" >Settings</a></li>
 			<li><a href="javascript:Utils.logout()" >Logout</a></li>
           </ul>
         </li>
+		</ul>
+	<div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav navbar-right">
+	 
+	   <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Currently Managed Games
+		  (<span class="managed_games_count">0</span>)<span class="caret"></span></a>
+          <ul class="managed_games dropdown-menu">
+          </ul>
+        </li>
       </ul>
+	  </div>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
 </nav>
 <div class="container">
 <div class="row">
@@ -82,7 +94,6 @@
 <center><h1>Let's Play Intervention <i>Online</i> </h1></center>
 </p>
 
-need to show the game that they're currently attached to
 <div class="row">
 		<div class="col-md-12">
 		<div class="error alert alert-dismissible alert-danger" style="display:none" role="alert"></div>
@@ -117,7 +128,6 @@ need to show the game that they're currently attached to
 	</div>
 	
 </div>
-</div>
 
 </body>
 <script>
@@ -129,9 +139,42 @@ $(document).ready(function() {
 	//setting username
 	var user = Parse.User.current();
 	$(".username").html(user.get("displayName"));
-	$(".career_score").html(user.get("total_career_score"));
+	
+	if(Utils.isValidString(user.get("game_id"))){
+		$(".attached_game_link").show();
+		$(".attached_game_link").attr("href", Urls.PLAY +"?gameId=" + user.get("game_id"));		
+	}
+	
+	setupManagedGames();
 	
 });
+
+
+function setupManagedGames(){
+var GameScore = Parse.Object.extend("game");
+		var query = new Parse.Query(GameScore);
+		query.equalTo("owner_id", String(Utils.getCurrentUser(false).id));
+		query.equalTo("active",true);
+		query.find({
+		  success: function(results) {
+			$(".managed_games_count").html(results.length);
+			
+			
+			
+			var dropdown = $(".managed_games");
+			for(var i=0;i<results.length;i++){
+				var gameid = results[i].get("unique_id");
+				var link = '<li><a href="'+Urls.MANAGE+'?gameId='+gameid+'" >'+gameid+'</a></li>';
+				dropdown.append(link);
+			}
+			
+			
+		  },
+		  error: function(error) {
+			Utils.showError(error.message);
+		  }
+		});
+}
 
 var manageURL;
 
@@ -209,10 +252,12 @@ $(".create").click(function(event) {
 		}
 	}
 	
+	
+	
 	function searchForGame(){
 		var GameScore = Parse.Object.extend("game");
 		var query = new Parse.Query(GameScore);
-		query.equalTo("unique_id", $("#inputCode").val());
+		query.equalTo("unique_id", Utils.removeSpace($("#inputCode").val()));
 		query.equalTo("active",true);
 		query.find({
 		  success: function(results) {
