--- a/intervention/WebContent/home.html
+++ b/intervention/WebContent/home.html
@@ -56,6 +56,7 @@
 		  <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#" >Settings</a></li>
+			<li><a href="javascript:Utils.goPage(Urls.EDIT_QUESTIONS)">Edit Questions</a></li>
 			<li><a href="javascript:Utils.logout()" >Logout</a></li>
           </ul>
         </li>
