--- a/intervention/WebContent/manage.play.html
+++ b/intervention/WebContent/manage.play.html
@@ -91,26 +91,24 @@
 						<h1>Welcome Manager</h1>
 						You're responsible for the following...
 						<ul>
-							<li>Starting the game
-							<li>Calculating results
+							
+							<li>Calculating results 
 							<li>Moving to next question
 							<li>Ending the game [Manager Options > End]
 						</ul>
-						<h3>
-							<span class="generated_code"></span>
-						</h3>
+						<h3>Current Score</h3>
+						<h3><span class="player_score">0</span></h3><br>
 						<br>
-						<p>Link to game</p>
-						<span class="fine">User must be logged in</span> <input
-							type="text" class="link_to_game" style="width: 100%"
-							onclick="this.select()" /> <br /> <br />
 						<p>Link to Main display screen</p>
 						<span class="fine">This screen is used to display the
 							current question, scores, and players</span> <input type="text"
 							class="link_to_main" style="width: 100%" onclick="this.select()" />
 						</div>
 						<div class="col-md-4" style="float:right;padding-top:16px">
-							<a href="#" class="startgame btn btn-raised btn-primary">Start Game<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a>
+							<a href="#" class="btn btn-raised btn-default" >Scoreboard</a>
+									<a href="#" class=" btn btn-raised btn-default" >View Question History</a>
+							  <button  disabled class="calculateresultsbutton btn btn-raised btn-primary" type="button"  data-toggle="dropdown">Calculate Results </button>
+							 <button  disabled class="calculateresultsbutton btn btn-raised btn-primary" type="button"  disabled data-toggle="dropdown">Next Question </button>
 						</div>
 						</div>
 					</div>
@@ -180,8 +178,11 @@
 									.showError("You do not own this game, therefore you cannot manage");
 							setTimeout(Utils.goPage(Urls.HOME), 3000);
 							return;
+						} else if (!game.get("started")) {
+
+							$(".main").html("<strong>Wow...</strong> Don't get ahead of yourself, this game hasn't started yet")
 						} else {
-							owner = Utils.getCurrentUser();
+							owner = Utils.getCurrentUser(false);
 						}
 
 						initGame();
@@ -193,142 +194,17 @@
 	}
 
 	function initGame() {
-		if (game.get("started")) {
-			Utils.goPage(Urls.MANAGE_PLAY + "?gameId=" + game.get("unique_id"));
-		}
 		
-		$(".startgame").click(function(){
-			startGame();
-		});
+	
 
-		$(".link_to_game").val(
-				window.location.href.split("/manage")[0] + "/" + Urls.PLAY
-						+ "?gameId=" + game.get("unique_id"));
+		
 		$(".link_to_main").val(
 				window.location.href.split("/manage")[0] + "/" + Urls.MAIN
 						+ "?gameId=" + game.get("unique_id"));
-		$(".generated_code").html(Utils.formatCode(game.get("unique_id")));
-
-		timer_getJoinedPlayers = setTimeout(checkForJoinedPlayers, 100);
-	}
-
-	function startGame(){
-		if(game!==undefined){
-			game.set("started",true);
-			game.save(null, {
-				  success: function(newGame) {
-					// Execute any logic that should take place after the object is saved.
-					Utils.goPage(Urls.MANAGE_PLAY + "?gameId=" + game.get("unique_id"))
-					console.log("game start");
-				  },
-				  error: function(newGame, error) {
-					// Execute any logic that should take place if the save fails.
-					// error is a Parse.Error with an error code and message.
-					Utils.showError(error.message);
-					console.log(error.message);
-				  }
-				});
-			
-			Utils.goPage(Urls.MANAGE_PLAY + "?gameId=" + game.get("unique_id"))
-		}
-	}
-	
-	function addPlayer(player) {
-		var className = "label" + player.id;
-		var panel = '<div style="display:none" class="'+className+' col-xs-4"><div class="panel panel-info">  <div class="panel-heading">    <h3 class="panel-title">NAME</h3>  </div>  <div class="panel-body"><a href="alert(STATS)">View Stats</a></div></div></div>'
-		panel = panel.replace("NAME", player.get("displayName"));
-		panel = panel.replace("STATS", "UPCOMING: " +Urls.STATS + "?userId=" + player.id);
-
-		if (player.id !== Utils.getCurrentUser(false).id
-				&& !Utils.containsPlayer(listOfPlayers, player)) {
-			listOfPlayers.push(player);
-			$(".player_wrapper").append(panel);
-			$("." + className).fadeIn()
-		}
-
-	}
-	function checkForJoinedPlayers() {
-		//get players
-		//append any NEW players (keep current ones in local stoage?
-
-		var Users = Parse.Object.extend("User");
-		var query = new Parse.Query(Users);
-		query.equalTo("game_id", String(gameId));
-		query
-				.find({
-					success : function(results) {
-						//resetting
-						listOfAllPlayers = [];
-						for ( var i = 0; i < results.length; i++) {
-							addPlayer(results[i]);
-							if (results[i].id !== Utils.getCurrentUser(false).id) {
-								listOfAllPlayers.push(results[i]);
-							}
-
-						}
-
-						///need to check if anyone has left.
-						updateLabels(getPlayerIdsThatHaveGone(listOfPlayers,
-								listOfAllPlayers));
-
-						listOfPlayers = listOfPlayers.filter(function(el) {
-
-							return Utils.containsPlayer(listOfAllPlayers, el);
-						});
-
-						$(".num_of_players").html(listOfPlayers.length);
-						timer_getJoinedPlayers = setTimeout(
-								checkForJoinedPlayers, 1000);
-
-					},
-					error : function(error) {
-						Utils.showError(error.message);
-					}
-				});
-		//starting the timer again
 
 	}
 
-	function updateLabels(list) {
-		for ( var i = 0; i < list.length; i++) {
-			var className = "label" + list[i];
-			$("." + className).fadeOut("slow", function() {
-				$("." + className).remove()
-			});
-		}
-	}
 
-	function getPlayerIdsThatHaveGone(currentList, actualList) {
-
-		var listOfIdsThatNoLongerExistAndNeedToBeDeleted = [];
-		for ( var i = 0; i < currentList.length; i++) {
-			if (!Utils.containsPlayer(actualList, currentList[i])) {
-				listOfIdsThatNoLongerExistAndNeedToBeDeleted
-						.push(currentList[i].id);
-			}
-		}
-		return listOfIdsThatNoLongerExistAndNeedToBeDeleted;
-	}
-
-	function EndGame() {
-		
-	}
-
-	function CloseAndDelete() {
-		//delete game from table
-		//unset any user game_id that has this game set
-		game.destroy({
-		  success: function(myObject) {
-		  console.log("game deleted successfully");
-		  $(".main").html("Game has been deleted, click <a href='"+Urls.HOME+"'>here</a> to go home");
-		  },
-		  error: function(myObject, error) {
-			Utils.showError(error.message);
-		  }
-		});
-		
-		
-	}
 
 </script>
 </html>
