--- a/intervention/WebContent/manage.html
+++ b/intervention/WebContent/manage.html
@@ -221,23 +221,10 @@
   function initStartGame(){
 
 		if(game!==undefined){
+			getThenSetRandomQuestion();
+			//need to set question first....
 			//MAKE GAME HERE TOO
-			game.set("started",true);
-			game.save(null, {
-				success: function(newGame) {
-					// Execute any logic that should take place after the object is saved.
-					//Utils.goPage(Urls.MANAGE_PLAY + "?gameId=" + game.get("unique_id"))
-					console.log("game start");
-					getThenSetRandomQuestion();
-
-				},
-				error: function(newGame, error) {
-					// Execute any logic that should take place if the save fails.
-					// error is a Parse.Error with an error code and message.
-					Utils.showError(error.message);
-					console.log(error.message);
-				}
-			});
+			
 			
 			
 		}
@@ -265,12 +252,29 @@
 	});
 
 	}
-
+	
 	function setGameQuestion(question){
 		game.set("current_question",question)
 		game.save(null, {
 			success: function(newGame) {
-				setTimeout(Utils.goPage(Urls.MANAGE_PLAY + "?gameId=" + game.get("unique_id")),2000);
+			
+			game.set("started",true);
+			game.save(null, {
+				success: function(newGame) {
+					// Execute any logic that should take place after the object is saved.
+					//Utils.goPage(Urls.MANAGE_PLAY + "?gameId=" + game.get("unique_id"))
+					console.log("game start");
+				setTimeout(Utils.goPage(Urls.MANAGE_PLAY + "?gameId=" + game.get("unique_id")),2000);	
+
+				},
+				error: function(newGame, error) {
+					// Execute any logic that should take place if the save fails.
+					// error is a Parse.Error with an error code and message.
+					Utils.showError(error.message);
+					console.log(error.message);
+				}
+			});
+				
 					console.log("new question created");
 			},
 			error: function(newGame, error) {
